Refactor Learning Model module