@@ -7,6 +7,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.StringReader;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -32,25 +33,25 @@ public class MethodNameFeatureLearner {
 	public static void main(String[] args) throws IOException {
 		MethodNameFeatureLearner learner = new MethodNameFeatureLearner();
 		String inputPath = Configuration.DL_DATA_PATH;
-		String methodNameTokensFile = Configuration.RENAMED_METHODS_PATH + "ParsedMethodNames.txt";
+		Path methodNameTokensFile = Paths.get(Configuration.RENAMED_METHODS_PATH, "ParsedMethodNames.txt");
 		String outputPath = Configuration.EVALUATION_DATA_PATH;
 		// Selecting data for method name feature learning.
-		String testingMethodNamesFile = outputPath + "TestingMethodNames.txt";
-		learner.prepareData(methodNameTokensFile, testingMethodNamesFile, outputPath + "TestingLabels.txt");
-		
-		String trainingData = inputPath + "SelectedData/SelectedMethodInfo.txt";
-		String featureLearningData1 = outputPath + "FeatureLearningData1.txt"; // without return type.
-		String featureLearningData2 = outputPath + "FeatureLearningData2.txt"; // with return type.
-		String returnTypeOfTestingFile = inputPath + "RenamedMethods/MethodInfo.txt";
+		Path testingMethodNamesFile = Paths.get(outputPath, "TestingMethodNames.txt");
+		learner.prepareData(methodNameTokensFile, testingMethodNamesFile, Paths.get(Configuration.EVALUATION_DATA_PATH, "TestingLabels.txt"));
+
+		Path trainingData = Paths.get(inputPath, "SelectedData", "SelectedMethodInfo.txt");
+		Path featureLearningData1 = Paths.get(outputPath, "FeatureLearningData1.txt"); // without return type.
+		Path featureLearningData2 = Paths.get(outputPath, "FeatureLearningData2.txt"); // with return type.
+		Path returnTypeOfTestingFile = Paths.get(inputPath, "RenamedMethods", "MethodInfo.txt");
 		learner.prepareFeatureLearningData(trainingData, testingMethodNamesFile, featureLearningData1, featureLearningData2, returnTypeOfTestingFile);
 		
-		learner.learnFeatures(new File(featureLearningData1), outputPath + "MethodNameFeatures_1_Size=" + learner.SIZE + ".txt");
-		learner.learnFeatures(new File(featureLearningData2), outputPath + "MethodNameFeatures_2_Size=" + learner.SIZE + ".txt");
-		learner.learnFeatures(new File(featureLearningData1 + ".bak"), outputPath + "MethodNameFeatures_1_Size=" + learner.SIZE + ".txt.bak");
-		learner.learnFeatures(new File(featureLearningData2 + ".bak"), outputPath + "MethodNameFeatures_2_Size=" + learner.SIZE + ".txt.bak");
+		learner.learnFeatures(featureLearningData1, Paths.get(outputPath, "MethodNameFeatures_1_Size=" + learner.SIZE + ".txt"));
+		learner.learnFeatures(featureLearningData2, Paths.get(outputPath, "MethodNameFeatures_2_Size=" + learner.SIZE + ".txt"));
+//		learner.learnFeatures(featureLearningData1 + ".bak", outputPath + "MethodNameFeatures_1_Size=" + learner.SIZE + ".txt.bak");
+//		learner.learnFeatures(featureLearningData2 + ".bak"), outputPath + "MethodNameFeatures_2_Size=" + learner.SIZE + ".txt.bak");
 	} 
 
-	public void prepareData(String methodNameTokensFile, String outputFile, String outputLabelFile) throws IOException {
+	public void prepareData(Path methodNameTokensFile, Path outputFile, Path outputLabelFile) throws IOException {
 		// tokens of old method names @ tokens of new method names.
 		List<String> methodNames = readFile(methodNameTokensFile);
 		int numConsistent = methodNames.size() / 2;
@@ -105,9 +106,9 @@ public class MethodNameFeatureLearner {
 		FileHelper.outputToFile(outputLabelFile + ".bak", labelBuilder2, false);
 	}
 
-	private List<String> readFile(String methodNameTokensFile) throws IOException {
+	private List<String> readFile(Path methodNameTokensFile) throws IOException {
 		List<String> methodNames = new ArrayList<>();
-		String content = FileHelper.readFile(Path.of(methodNameTokensFile).toFile());
+		String content = FileHelper.readFile(methodNameTokensFile.toFile());
 		BufferedReader reader = new BufferedReader(new StringReader(content));
 		String line = null;
 		while ((line = reader.readLine()) != null) {
@@ -117,9 +118,9 @@ public class MethodNameFeatureLearner {
 		return methodNames;
 	}
 
-	public void prepareFeatureLearningData(String trainingData, String testingMethodNamesFile,
-			String featureLearningData1, String featureLearningData2, String returnTypeOfTestingFile) throws IOException {
-		FileInputStream fis = new FileInputStream(trainingData);
+	public void prepareFeatureLearningData(Path trainingData, Path testingMethodNamesFile,
+																				 Path featureLearningData1, Path featureLearningData2, Path returnTypeOfTestingFile) throws IOException {
+		FileInputStream fis = new FileInputStream(trainingData.toFile());
 		Scanner scanner = new Scanner(fis);
 
 		StringBuilder builder = new StringBuilder();
@@ -140,8 +141,8 @@ public class MethodNameFeatureLearner {
 		
 		FileHelper.outputToFile(featureLearningData1, builder, false);
 		FileHelper.outputToFile(featureLearningData1 + ".bak", builder, false);
-		String content = FileHelper.readFile(Path.of(testingMethodNamesFile).toFile());
-		String contentBak = FileHelper.readFile(Path.of(testingMethodNamesFile + ".bak").toFile());
+		String content = FileHelper.readFile(testingMethodNamesFile.toFile());
+		String contentBak = FileHelper.readFile(Paths.get(testingMethodNamesFile + ".bak").toFile());
 		FileHelper.outputToFile(featureLearningData1, content, true);
 		FileHelper.outputToFile(featureLearningData1 + ".bak", contentBak, true);
 		
@@ -155,7 +156,7 @@ public class MethodNameFeatureLearner {
 		List<String> tokensList = readTokensList(content);
 		List<String> tokensListBak = readTokensList(contentBak);
 		
-		BufferedReader reader = new BufferedReader(new StringReader(FileHelper.readFile(Path.of(returnTypeOfTestingFile).toFile())));
+		BufferedReader reader = new BufferedReader(new StringReader(FileHelper.readFile(returnTypeOfTestingFile.toFile())));
 		int index = 0;
 		String line = null;
 		while ((line = reader.readLine()) != null) {
@@ -183,50 +184,14 @@ public class MethodNameFeatureLearner {
 		reader.close();
 		return tokensList;
 	}
-
-	public void prepareFeatureLearningData(String dataFile, String featureLearningData1, String featureLearningData2,
-			boolean appended) throws IOException {
-		FileInputStream fis = new FileInputStream(dataFile);
-		Scanner scanner = new Scanner(fis);
-
-		StringBuilder builder = new StringBuilder();
-		StringBuilder returnTypeBuilder = new StringBuilder();
-		while (scanner.hasNextLine()) {
-			String line = scanner.nextLine();
-			int index = line.lastIndexOf("@");
-			String tokens = line.substring(index + 1).replace(",", " ");
-			builder.append(tokens).append("\n");
-
-			line = line.substring(0, index);
-			index = line.lastIndexOf("@");
-			String returnType = line.substring(index + 1);
-			returnTypeBuilder.append(returnType).append(" ").append(tokens).append("\n");
-			if (appended) this.SIZE ++;
-		}
-		scanner.close();
-		fis.close();
-
-		FileHelper.outputToFile(featureLearningData1, builder, appended);
-		if (featureLearningData2 != null) FileHelper.outputToFile(featureLearningData2, returnTypeBuilder, appended);
-	}
 	
-	public void learnFeatures(File inputFile, String outputFileName) throws FileNotFoundException {
+	public void learnFeatures(Path inputFile, Path outputFileName) throws FileNotFoundException {
 		FileHelper.deleteFile(outputFileName);
 		SentenceEncoder encoder = new SentenceEncoder();
 		int minWordFrequency = 1;
 		int layerSize = 300;
 		int windowSize = 2;
 		encoder.encodeSentences(inputFile, minWordFrequency, layerSize, windowSize, outputFileName);
-//		ParagraphVectors vec = encoder.vec;
-//		for (int i = 0; i < SIZE; i ++) {
-//			Map<Integer, Double> similarities = new HashMap<>();
-//			for (int j = 0; j < numOfTrainingData; j ++) {
-//				Double similarity = Double.valueOf(vec.similarity("SEN_" + (i + numOfTrainingData), "SEN_" + j));
-//				similarities.put(j, similarity);
-//			}
-//			MapSorter<Integer, Double> sorter = new MapSorter<>();
-//			similarities = sorter.sortByValueDescending(similarities);
-//		}
 	}
 	
 }
